# EdTechTest

./: .env.example  Makefile  README.md  docker-compose.yml  postgresql.conf
asr/: Dockerfile  README.md  constants.py  main.py  pyproject.toml
asr/api/: models.py  routes.py
bot/: Dockerfile  bot.py  llm_client.py  pyproject.toml
common/: constants.py
common/auth/: auth.py  router.py  tokendata.py
common/auth/models/: requests.py  responses.py
llm/: Dockerfile  README.md  config.py  main.py  pyproject.toml
llm/api/database/: database.py
llm/api/models/: requests.py  responses.py
llm/api/routers/: chat.py  vectorstore.py
llm/api/utils/: asr.py  chains.py  embeddings.py  llm.py  parser.py  splitter.py  vectorstore.py
llm/prompts/: main_prompt.py
