[tool.poetry]
name = "asr"
version = "0.1.0"
description = ""
authors = ["redyc123 <redyc123@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
whisper = ">=1.1.10,<2.0.0"
fastapi = ">=0.124.0,<0.125.0"
uvicorn = {version = ">=0.38.0,<0.39.0", extras = ["standard"]}
openai-whisper = ">=20250625,<20250626"
python-multipart = ">=0.0.20,<0.0.21"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
