[project]
name = "bot"
version = "0.1.0"
description = ""
authors = [
    {name = "redyc123",email = "redyc123@gmail.com"}
]
readme = "README.md"
requires-python = "<3.15,>=3.11"
dependencies = [
    "aiohttp (>=3.13.2,<4.0.0)",
    "aiogram (>=3.23.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
