[project]
name = "llm"
version = "0.1.0"
description = ""
authors = [
    {name = "redyc123",email = "redyc123@gmail.com"}
]
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "langchain (>=1.1.3,<2.0.0)",
    "langchain-openai (>=1.1.1,<2.0.0)",
    "langchain-postgres (>=0.0.16,<0.0.17)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "langchain-huggingface (>=1.1.0,<2.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "psycopg (>=3.3.2,<4.0.0)",
    "fastapi (>=0.124.0,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "aiohttp (>=3.13.2,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
